# trinity_website

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend/: __init__.py  app.py  utils.py
backend/.github/workflows/: main.yml
backend/scrapers/: __init__.py
backend/scrapers/cache/: all_events.html  all_news.html  all_notice.html  index.html
backend/scrapers/detail_html/: __init__.py
backend/scrapers/downloadable/: __init__.py
backend/scrapers/events/: __init__.py  main.py
backend/scrapers/footer/: __init__.py
backend/scrapers/login/: __init__.py
backend/scrapers/navigation/: __init__.py  main.py
backend/scrapers/news/: __init__.py  main.py
backend/scrapers/notice/: __init__.py  main.py
backend/static/css/: main.css  responsive_table.css
backend/static/scripts/: responsive_table.min.js
backend/templates/: detail.html  footer.html  home.html  index.html  layout.html  navigation.html
frontend/: body.html  footer.html  index.html  layout.html  navigation.html
frontend/css/: color.txt  main.css  news.css  notice.css  queries_news.css  queries_notice.css
frontend/new landing page/css/: color.txt  footer.css  main.css
frontend/new_landing_page/: index.html
frontend/new_landing_page/css/: navigation.css  queries.css
frontend/new_landing_page/js/: script.js
frontend/news_notice/: news1_raw.html  news2_raw.html  news3_raw.html  news_easy.html  news_raw.html  notice1_raw.html  notice2_raw.html  notice_easy.html  notice_raw.html
