[tool.poetry]
name = "trinity_website"
version = "0.1.0"
description = "Complete website redesign of trinitycollege.edu.np"
authors = ["Hemanta Sharma <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
jinja2 = "^2.10.3"
requests_html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
