[tool.poetry]
name = "trinity_website"
version = "0.1.0"
description = "Complete website redesign of trinitycollege.edu.np"
authors = ["Hemanta Sharma <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.5"
flask = "^1.1.1"
jinja2 = "^2.10.3"
requests_html = "^0.10.0"
gunicorn = "^19.9.0"
pandas = "^1.0.3"
html5lib = "^1.0.1"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.9"
pyls-isort = "^0.1.1"
epc = "^0.0.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
